crud operation with react and node, gitignore updated

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 /crud-using-react/node_modules
+/crud-using-react/src/server/node_modules
 /plain-redux/node_modules
 /prop-types/node_modules
 /props/node_modules
